--- a/hospitalmanagement-client/package.json
+++ b/hospitalmanagement-client/package.json
@@ -19,7 +19,9 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-to-print": "^2.14.7",
+    "react-toastify": "^9.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
