--- a/hospitalmanagement-client/package.json
+++ b/hospitalmanagement-client/package.json
@@ -19,6 +19,8 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-search": "^2.1.1",
+    "react-to-pdf": "^0.0.14",
     "react-to-print": "^2.14.7",
     "web-vitals": "^2.1.4"
   },
